--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
+:root {
+    --main-bg-color: brown;
+    --Black: #232134;
+    --White: #FFFFFF;
+    --Gray-600: #7B7C88;
+    --Gray-500: #ACADB9;
+    --Gray-300: #D5D6DC;
+    --Gray-200: #EAEBED;
+    --Gray-100: #F5F5F6;
+    --Blue-600: #3B7CD3;
+    --Blue-500-Main: #5E96FC;
+    --Blue-400: #92C1FF;
+    --Blue-300: #B7D6FF;
+    --Blue-200: #C9E0FF;
+    --Blue-100: #DEECFF;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: var(--Gray-100);
+    font-family: 'Inter-Medium';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    line-height: 1.4;
+    color: var(--Black);
+}
+
+@font-face {
+    font-family: "Inter-Regular";
+    src: url('./assets/fonts/Inter-Regular.ttf');
+}
+
+@font-face {
+    font-family: "Inter-Medium";
+    src: url('./assets/fonts/Inter-Medium.ttf');
+}
+
+@font-face {
+    font-family: "Inter-SemiBold";
+    src: url('./assets/fonts/Inter-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: "Inter-Bold";
+    src: url('./assets/fonts/Inter-Bold.ttf');
+}
+
+@font-face {
+    font-family: "Poppins-SemiBold";
+    src: url('./assets/fonts/Poppins-SemiBold.ttf');
 }
