--- a/src/App/App.css
+++ b/src/App/App.css
@@ -62,3 +62,14 @@
     line-height: 36px;
     letter-spacing: -0.02em;
 }
+
+
+
+
+#error-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
