--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ html,
 body {
     height: 100%;
     margin: 0;
+    padding: 0;
     line-height: 1.4;
     color: var(--Black);
 }
@@ -74,4 +75,17 @@ body {
 @font-face {
     font-family: "Poppins-SemiBold";
     src: url('./assets/fonts/Poppins-SemiBold.ttf');
+}
+
+input[type="text"], input[type="number"] {
+    padding: 0;
+    font-family: 'Inter-Regular';
+    font-size: 14px;
+    line-height: 21px;
+    color: var(--Black);
+    border-width: 1px;
+}
+
+input::placeholder {
+    color: var(--Gray-500);
 }
