--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,7 @@
 .header-container {
     background-color: var(--White);
     width: 100%;
+    margin-bottom: 40px;
 }
 
 .header {
@@ -9,7 +10,7 @@
     align-items: center;
     margin: 0 auto;
     height: 84px;
-    max-width: 1146px;
+    max-width: 1156px;
     background-color:var(--White);
     padding: 0 20px;
     gap: 280px;
