--- a/src/components/VacanciesItem/vacanciesItem.scss
+++ b/src/components/VacanciesItem/vacanciesItem.scss
@@ -9,6 +9,7 @@
     border-radius: 8px;
 
     .item__title {
+        padding-right: 30px;
         font-family: 'Inter-SemiBold';
         font-size: 20px;
         line-height: 24px;
