--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,10 @@
+._card {
+    padding: 24px;
+    background-color: var(--White);
+    border: 1px solid var(--Gray-200);
+    border-radius: 8px;
+}
+
 .content-wrapper {
     max-width: 1156px;
     padding: 0 20px;
@@ -27,4 +34,27 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+.vacancy {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 773px;
+    padding-bottom: 51px;
+}
+
+.vacancy__description p {
+    font-family: "Inter-Regular";
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--Black);
+}
+
+.vacancy__description b {
+    font-family: "Inter-Bold";
+    font-size: 20px;
+    line-height: 20px;
+    color: var(--Black);
 }
