--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,7 @@ input[type="text"], input[type="number"] {
 input::placeholder {
     color: var(--Gray-500);
 }
+
+a {
+    text-decoration: none;
+}
