--- a/src/components/VacanciesItem/vacanciesItem.scss
+++ b/src/components/VacanciesItem/vacanciesItem.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 13px;
+    gap: 12px;
 
     .item__title {
         padding-right: 30px;
@@ -36,6 +36,10 @@
         display: flex;
         align-items: center;
         gap: 11px;
+
+        span {
+            line-height: 19px;
+        }
     }
 
     .item__favorite-button {
