--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -13,14 +13,16 @@
     max-width: 1156px;
     background-color:var(--White);
     padding: 0 20px;
-    gap: 280px;
+}
+
+.header ul, .header li {
+    list-style: none;
 }
 
 .logo {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 3px;
     gap: 12px;
 }
 
@@ -69,11 +71,24 @@
     letter-spacing: -0.02em;
 }
 
+.menu, .menu-dropdown {
+    margin-right: 140px;
+    width: 100%;
+}
+
 .menu__list {
+    padding: 0;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 60px;
     list-style: none;
+}
+
+.menu-dropdown .menu__list {
+    margin: 0;
+    flex-direction: column;
+    gap: 5px;
 }
 
 .menu__item {
@@ -88,6 +103,38 @@
     padding: 5px 2px;
 }
 
+.menu-dropdown .menu__item a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px 5px;
+}
+
+.menu-dropdown .menu__item a:hover{
+    background-color: var(--Blue-100);
+}
+
 .menu__item a.active {
     color: var(--Blue-500-Main);
+}
+
+@media screen and (max-width: 1023px) {
+    .header-container {
+        margin-bottom: 10px;
+    }
+
+    .menu__list {
+        gap: 30px;
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        justify-content: space-between;
+    }
+
+    .menu {
+        display: none;
+    }
 }
